--- a/locales/de.json
+++ b/locales/de.json
@@ -2,13 +2,13 @@
   "about": {
     "bug-reports": "Fehlerberichte und Funktionsanfragen:",
     "bug-reports-back": "Server / Backend, Routing Engine, Android-App, Profile, brouter.de Website",
-    "bug-reports-front": "Web-Client / Frontend:",
+    "bug-reports-front": "Web-Client / Frontend.",
     "contact": "Kontakt:",
     "data": "Daten:",
     "data-description": "Dies basiert auf <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Es wird normalerweise einmal pro Woche aktualisiert, wenn ein neues Planet-File verfügbar ist. Siehe Datum der <a href=\"http://brouter.de/brouter/segments4/\" target=\"_blank\">Datendateien</a>.",
     "description": "Online-Service der BRouter Routing Engine. Für die Offline-Android-App und weitere Informationen siehe <a href=\"http://brouter.de/\" target=\"_blank\">brouter.de</a>.",
     "details": "<i><a href=\"http://brouter.de/privacypolicy.html\" target=\"_blank\">Datenschutz-Bestimmungen</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Credits</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Änderungsprotokoll</a></i> und\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">weitere Infos</a></i> zum Client.",
-    "support": "Generelle Diskussionen/Fragen, Support:",
+    "support": "Generelle Diskussionen/Fragen, Support",
     "title": "Über"
   },
   "credits": {
