--- a/locales/en.json
+++ b/locales/en.json
@@ -21,6 +21,17 @@
     "nominatim": "Search by <a href=\"https://wiki.openstreetmap.org/wiki/Nominatim\" target=\"_blank\" data-i18n=\"credits.nominatim\">Nominatim</a>",
     "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >OpenStreetMap contributors</a> under <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>"
   },
+  "export": {
+    "format": "Format",
+    "format_csv": "CSV",
+    "format_geojson": "GeoJSON",
+    "format_gpx": "GPX",
+    "format_kml": "KML",
+    "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
+    "route-loop": "{{from}} ({{distance}}km)",
+    "title": "Export route",
+    "trackname": "Name"
+  },
   "footer": {
     "ascend": "Ascend (Plain ascend)",
     "cost": "Cost (Mean cost factor)",
@@ -100,6 +111,9 @@
     "zoomInTitle": "Zoom in",
     "zoomOutTitle": "Zoom out"
   },
+  "modal": {
+    "close": "Close"
+  },
   "navbar": {
     "about": "About",
     "alternative": {
@@ -108,13 +122,7 @@
       "second": "2nd alternative",
       "third": "3rd alternative"
     },
-    "download": {
-      "csv": "data CSV",
-      "geojson": "GeoJSON",
-      "gpx": "GPX",
-      "kml": "KML",
-      "title": "Download"
-    },
+    "export": "Export",
     "load": {
       "nogos": "No-go areas",
       "title": "Load"
