Fix missing layer keys after extracting layer configs

--- a/locales/en.json
+++ b/locales/en.json
@@ -60,14 +60,27 @@
     "attribution-osm-short": "OpenStreetMap",
     "clear-route": "Clear route",
     "copyright": "Copyright",
+    "cycling": "",
     "delete-nogo-areas": "&nbsp;&nbsp;also delete all no-go areas",
     "delete-route": "Delete route?",
     "draw-route-start": "Draw route (D key)",
     "draw-route-stop": "Stop drawing route (ESC key)",
+    "hikebike-hillshading": "",
+    "hiking": "",
     "layer": {
       "bing": "Bing Aerial",
+      "cycle": "",
+      "cycling": "",
       "digitalglobe": "DigitalGlobe Recent Imagery",
-      "strava-segments": "Strava segments"
+      "esri": "",
+      "hikebike-hillshading": "",
+      "hiking": "",
+      "osm": "",
+      "osmde": "",
+      "outdoors": "",
+      "stamen-terrain": "",
+      "strava-segments": "Strava segments",
+      "topo": ""
     },
     "loading": "Loading…",
     "locate-me": "Show me where I am",
