Restore default texts from bea7af0

--- a/locales/en.json
+++ b/locales/en.json
@@ -60,27 +60,27 @@
     "attribution-osm-short": "OpenStreetMap",
     "clear-route": "Clear route",
     "copyright": "Copyright",
-    "cycling": "",
+    "cycling": "Cycling",
     "delete-nogo-areas": "&nbsp;&nbsp;also delete all no-go areas",
     "delete-route": "Delete route?",
     "draw-route-start": "Draw route (D key)",
     "draw-route-stop": "Stop drawing route (ESC key)",
-    "hikebike-hillshading": "",
-    "hiking": "",
+    "hikebike-hillshading": "Hillshading",
+    "hiking": "Hiking",
     "layer": {
       "bing": "Bing Aerial",
-      "cycle": "",
-      "cycling": "",
+      "cycle": "OpenCycleMap (Thunderf.)",
+      "cycling": "Cycling (Waymarked Trails)",
       "digitalglobe": "DigitalGlobe Recent Imagery",
-      "esri": "",
-      "hikebike-hillshading": "",
-      "hiking": "",
-      "osm": "",
-      "osmde": "",
-      "outdoors": "",
-      "stamen-terrain": "",
+      "esri": "Esri World Imagery",
+      "hikebike-hillshading": "Hillshading (Hike & Bike Map)",
+      "hiking": "Hiking (Waymarked Trails)",
+      "osm": "OpenStreetMap",
+      "osmde": "OpenStreetMap.de",
+      "outdoors": "Outdoors (Thunderforest)",
+      "stamen-terrain": "Terrain (Stamen)",
       "strava-segments": "Strava segments",
-      "topo": ""
+      "topo": "OpenTopoMap"
     },
     "loading": "Loading…",
     "locate-me": "Show me where I am",
