--- a/locales/de.json
+++ b/locales/de.json
@@ -61,6 +61,7 @@
     "clear-route": "Route löschen",
     "copyright": "Copyright",
     "cycling": "Radfahren",
+    "delete-last-point": "Letzten Punkt löschen",
     "delete-nogo-areas": "&nbsp;&nbsp;auch alle no-go areas löschen",
     "delete-route": "Route löschen?",
     "draw-route-start": "Route anzeigen (D Taste)",
@@ -93,6 +94,7 @@
     },
     "opacity-slider": "Transparenz von Route und Markern anpassen",
     "privacy": "Datenschutz",
+    "reverse-route": "Route umkehren",
     "strava-biking": "Zeige Strava Radfahrsegmente",
     "strava-running": "Zeige Strava Läufersegmente",
     "zoomInTitle": "Hineinzoomen",
