--- a/locales/fr.json
+++ b/locales/fr.json
@@ -61,6 +61,7 @@
     "clear-route": "Supprimer l'itinéraire",
     "copyright": "Copyright",
     "cycling": "Vélo",
+    "delete-last-point": "Delete last point",
     "delete-nogo-areas": "&nbsp;&nbsp;supprimer aussi toutes les zones interdites",
     "delete-route": "Supprimer l'itinéraire ?",
     "draw-route-start": "Dessiner l'itinéraire (touche D)",
@@ -93,6 +94,7 @@
     },
     "opacity-slider": "Définie l'opacité de l'itinéraire et des marqueurs",
     "privacy": "Vie privée",
+    "reverse-route": "Reverse route",
     "strava-biking": "Afficher les segments Strava vélo",
     "strava-running": "Afficher les segments Strava à pied",
     "zoomInTitle": "Zoomer",
