--- a/locales/hu.json
+++ b/locales/hu.json
@@ -61,6 +61,7 @@
     "clear-route": "Útvonal törlése",
     "copyright": "Szerzői jogok",
     "cycling": "Kerékpározás",
+    "delete-last-point": "Delete last point",
     "delete-nogo-areas": "&nbsp;&nbsp;törlődjenek az elkerülendő területek is",
     "delete-route": "Útvonal törlése?",
     "draw-route-start": "Útvonal rajzolása (D billentyű)",
@@ -93,6 +94,7 @@
     },
     "opacity-slider": "Nyomvonal és jelölők átlátszóságának beállítása",
     "privacy": "Adatvédelem",
+    "reverse-route": "Reverse route",
     "strava-biking": "Strava motoros útvonalszakaszok megjelenítése",
     "strava-running": "Strava futó útvonalszakaszok megjelenítése",
     "zoomInTitle": "Nagyítás",
