--- a/locales/pt.json
+++ b/locales/pt.json
@@ -61,6 +61,7 @@
     "clear-route": "Clear route",
     "copyright": "Copyright",
     "cycling": "Cycling",
+    "delete-last-point": "Delete last point",
     "delete-nogo-areas": "&nbsp;&nbsp;also delete all no-go areas",
     "delete-route": "Delete route?",
     "draw-route-start": "Draw route (D key)",
@@ -93,6 +94,7 @@
     },
     "opacity-slider": "Set transparency of route track and markers",
     "privacy": "Privacy",
+    "reverse-route": "Reverse route",
     "strava-biking": "Show Strava biking segments",
     "strava-running": "Show Strava running segments",
     "zoomInTitle": "Zoom in",
