--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -61,6 +61,7 @@
     "clear-route": "清除路線",
     "copyright": "著作權",
     "cycling": "自行車",
+    "delete-last-point": "Delete last point",
     "delete-nogo-areas": "&nbsp;&nbsp;同時刪除所有禁區",
     "delete-route": "刪除路線？",
     "draw-route-start": "繪畫路線 (按鍵D)",
@@ -93,6 +94,7 @@
     },
     "opacity-slider": "設定路線軌跡和標記的透明度",
     "privacy": "隱私權",
+    "reverse-route": "Reverse route",
     "strava-biking": "顯示 Strava 自行車區段",
     "strava-running": "顯示 Strava 跑步區段",
     "zoomInTitle": "放大",
