--- a/locales/de.json
+++ b/locales/de.json
@@ -21,6 +21,17 @@
     "nominatim": "Suchen mit <a href=\"https://wiki.openstreetmap.org/wiki/Nominatim\" target=\"_blank\" data-i18n=\"credits.nominatim\">Nominatim</a>",
     "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >OpenStreetMap contributors</a> unter <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>"
   },
+  "export": {
+    "format": "Format",
+    "format_csv": "CSV",
+    "format_geojson": "GeoJSON",
+    "format_gpx": "GPX",
+    "format_kml": "KML",
+    "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
+    "route-loop": "{{from}} ({{distance}}km)",
+    "title": "Export route",
+    "trackname": "Name"
+  },
   "footer": {
     "ascend": "Aufsteigend (einfach aufsteigend)",
     "cost": "Kosten (durchschnittlicher Kostenfaktor)",
@@ -100,6 +111,9 @@
     "zoomInTitle": "Hineinzoomen",
     "zoomOutTitle": "Herauszoomen"
   },
+  "modal": {
+    "close": "Close"
+  },
   "navbar": {
     "about": "Über",
     "alternative": {
@@ -108,13 +122,7 @@
       "second": "2. Alternative",
       "third": "3. Alternative"
     },
-    "download": {
-      "csv": "CSV Daten",
-      "geojson": "GeoJSON",
-      "gpx": "GPX",
-      "kml": "KML",
-      "title": "Download"
-    },
+    "export": "Export",
     "load": {
       "nogos": "No-go-Areas",
       "title": "Laden"
