--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -21,6 +21,17 @@
     "nominatim": "搜尋服務由 <a href=\"https://wiki.openstreetmap.org/wiki/Nominatim\" target=\"_blank\" data-i18n=\"credits.nominatim\">Nominatim</a>提供",
     "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >OpenStreetMap 貢獻者</a> 基於 <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>釋出"
   },
+  "export": {
+    "format": "Format",
+    "format_csv": "CSV",
+    "format_geojson": "GeoJSON",
+    "format_gpx": "GPX",
+    "format_kml": "KML",
+    "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
+    "route-loop": "{{from}} ({{distance}}km)",
+    "title": "Export route",
+    "trackname": "Name"
+  },
   "footer": {
     "ascend": "爬升量 (淨爬升)",
     "cost": "成本 (平均成本係數)",
@@ -100,6 +111,9 @@
     "zoomInTitle": "放大",
     "zoomOutTitle": "縮小"
   },
+  "modal": {
+    "close": "Close"
+  },
   "navbar": {
     "about": "關於",
     "alternative": {
@@ -108,13 +122,7 @@
       "second": "第二替代方案",
       "third": "第三替代方案"
     },
-    "download": {
-      "csv": "資料 CSV",
-      "geojson": "GeoJSON",
-      "gpx": "GPX",
-      "kml": "KML",
-      "title": "下載"
-    },
+    "export": "Export",
     "load": {
       "nogos": "No-go areas",
       "title": "Load"
