Polish UI of track statistics bar
Use "x | y" format instead "x (y)"
(The old format was a bit confusing, e.g. the second part of the label
could be mistaken for an "explanation" of the first part, while it
actually is an entirely separate label.)

Repeat unit for every metric.

Use plural for units.

Use "-" everywhere when a metric is not yet available instead of mixing
"-" and "0".

Properly revert to initial "-" when removing route instead of showing
"0".

Show "0" instead of "" when route length cannot be calculated yet.

Slightly change wording ("Energy per 100km").

--- a/locales/en.json
+++ b/locales/en.json
@@ -33,18 +33,18 @@
     "trackname": "Name"
   },
   "footer": {
-    "ascend": "Ascend (Plain ascend)",
-    "cost": "Cost (Mean cost factor)",
+    "ascend": "Ascend | Plain ascend",
+    "cost": "Cost | Mean cost factor",
     "distance": "Distance",
-    "kilometer": "kilometer",
+    "kilometer": "kilometers",
     "kilometer-abbrev": "km",
-    "kilowatthour": "kilowatt hour",
+    "kilowatthour": "kilowatt hours",
     "kilowatthour-abbrev": "kWh",
-    "meter": "meter",
+    "meter": "meters",
     "meter-abbrev": "m",
     "minutes": "minutes",
     "minutes-abbrev": "min",
-    "total-energy": "Total Energy (per 100km)",
+    "total-energy": "Total Energy | Energy per 100 km",
     "travel-time": "Travel time"
   },
   "layers": {
