--- a/locales/fr.json
+++ b/locales/fr.json
@@ -33,18 +33,21 @@
     "trackname": "Nom"
   },
   "footer": {
-    "ascend": "Dénivelé cumulé (dénivelé global)",
-    "cost": "Coût (facteur coût moyen)",
+    "ascend": "Dénivelé cumulé",
+    "cost": "Coût",
     "distance": "Distance",
-    "kilometer": "kilomètre",
+    "energy-per-100km": "Énergie pour 100km",
+    "hours": "heures",
+    "hours-abbrev": "h",
+    "kilometer": "kilomètres",
     "kilometer-abbrev": "km",
-    "kilowatthour": "kilowattheure",
+    "kilowatthour": "kilowattheures",
     "kilowatthour-abbrev": "kWh",
-    "meter": "mètre",
+    "mean-cost-factor": "Facteur coût moyen",
+    "meter": "mètres",
     "meter-abbrev": "m",
-    "minutes": "minutes",
-    "minutes-abbrev": "min",
-    "total-energy": "Énergie totale (pour 100km)",
+    "plain-ascend": "Dénivelé global",
+    "total-energy": "Énergie totale",
     "travel-time": "Temps de trajet"
   },
   "layers": {
