--- a/locales/hu.json
+++ b/locales/hu.json
@@ -33,18 +33,21 @@
     "trackname": "Name"
   },
   "footer": {
-    "ascend": "Összes emelkedés (végpontok közötti szintkülönbség)",
-    "cost": "Ráfordítás (közepes ráfordítástényező)",
+    "ascend": "Ascend",
+    "cost": "Cost",
     "distance": "Távolság",
-    "kilometer": "kilométer",
+    "energy-per-100km": "Energy per 100 km",
+    "hours": "hours",
+    "hours-abbrev": "h",
+    "kilometer": "kilometers",
     "kilometer-abbrev": "km",
-    "kilowatthour": "kilowattóra",
+    "kilowatthour": "kilowatt hours",
     "kilowatthour-abbrev": "kWh",
-    "meter": "méter",
+    "mean-cost-factor": "Mean cost factor",
+    "meter": "meters",
     "meter-abbrev": "m",
-    "minutes": "perc",
-    "minutes-abbrev": "min",
-    "total-energy": "Teljes energiafelhasználás (100 km-enként)",
+    "plain-ascend": "Plain ascend",
+    "total-energy": "Total Energy",
     "travel-time": "Utazási idő"
   },
   "layers": {
