--- a/locales/pt.json
+++ b/locales/pt.json
@@ -33,18 +33,21 @@
     "trackname": "Name"
   },
   "footer": {
-    "ascend": "Ascend (Plain ascend)",
-    "cost": "Cost (Mean cost factor)",
+    "ascend": "Ascend",
+    "cost": "Cost",
     "distance": "Distance",
-    "kilometer": "kilometer",
+    "energy-per-100km": "Energy per 100 km",
+    "hours": "hours",
+    "hours-abbrev": "h",
+    "kilometer": "kilometers",
     "kilometer-abbrev": "km",
-    "kilowatthour": "kilowatt hour",
+    "kilowatthour": "kilowatt hours",
     "kilowatthour-abbrev": "kWh",
-    "meter": "meter",
+    "mean-cost-factor": "Mean cost factor",
+    "meter": "meters",
     "meter-abbrev": "m",
-    "minutes": "minutes",
-    "minutes-abbrev": "min",
-    "total-energy": "Total Energy (per 100km)",
+    "plain-ascend": "Plain ascend",
+    "total-energy": "Total Energy",
     "travel-time": "Travel time"
   },
   "layers": {
