--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -33,18 +33,21 @@
     "trackname": "Name"
   },
   "footer": {
-    "ascend": "爬升量 (淨爬升)",
-    "cost": "成本 (平均成本係數)",
+    "ascend": "Ascend",
+    "cost": "Cost",
     "distance": "距離",
-    "kilometer": "公里",
+    "energy-per-100km": "Energy per 100 km",
+    "hours": "hours",
+    "hours-abbrev": "h",
+    "kilometer": "kilometers",
     "kilometer-abbrev": "km",
-    "kilowatthour": "千瓦時",
+    "kilowatthour": "kilowatt hours",
     "kilowatthour-abbrev": "kWh",
-    "meter": "公尺",
+    "mean-cost-factor": "Mean cost factor",
+    "meter": "meters",
     "meter-abbrev": "m",
-    "minutes": "分鐘",
-    "minutes-abbrev": "min",
-    "total-energy": "總計能量 (每100km)",
+    "plain-ascend": "Plain ascend",
+    "total-energy": "Total Energy",
     "travel-time": "旅程需時"
   },
   "layers": {
